--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "phr-dashboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://cnr-ehealth.page/dashboard",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
